# ulogger

./: .gitignore  LICENSE  README.md  example.py  pyproject.toml
configs/: ulogger.yaml
mylogger/: __init__.py  logger.py  logger_config.yaml  my_logger.py
ulogger/: __init__.py  ulogger.py
utils/: _init_.py  ulogger.py
