[build-system]
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ulogger"
version = "0.1.0"
description = "ulogger: An Extended Python Logger"
authors = [
    { name = "ycshao21", email = "matthewshao21@outlook.com" }, 
    { name = "jamesnulliu", email = "jamesnulliu@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.7"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache License",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Logging",
]
dependencies = [
    "concurrent_log_handler",
    "ruamel.yaml",
]

[tool.setuptools]
packages = ["ulogger"]
package-dir = { "" = "." }